# GoogleTestActionJob

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.ps1
.github/workflows/: ci.yml  codeanalysis.yml
src/: main.cpp
src/Calculator/: MathOperation.cpp  MathOperation.hpp
tests/: test_math_operations.cpp
